# StarLocator

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  LICENSE  NOTICE  NOTICE.md  README.md  eslint.config.mjs  help.html  index.html  main.css  main.js  main.js.LICENSE.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sitecss.css  vite.config.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
backend/: README.md  config.py  main.py  pyproject.toml
backend/core/: utils.py
backend/core/astro_coord/: calc.py  remote.py  utils.py
backend/core/astrometry/: client.py  extract.py  solve.py
backend/core/moon_time/: calc.py  utils.py
backend/core/positioning/: calc.py
backend/core/positioning/find_z/: README.md
backend/core/positioning/find_z/methods/: bi_mean.py  north_len.py  trisect.py
backend/core/positioning/find_z/utils/: math.py
backend/core/positioning/latitude/: benchmark.py  series_model.py
backend/core/positioning/latitude/method/: bisect_formular.py  (+2 more)
backend/core/positioning/locator/: benchmark.py
backend/core/stellarium/: screenshot.py
backend/core/utils/: http.py
backend/routers/: astro_coord.py  astrometry.py  bmap.py  limiter.py  moon_time.py  positioning.py
backend/schemas/: moon_time.py  positioning.py
backend/schemas/astrometry/: extract_stars.py  recognize.py  submit.py
backend/tests/: test_astro_coord.py  test_moon_time.py  test_positioning.py
backend/tests/test_astrometry/: test_extract_stars.py  test_recognize.py  test_submit.py
(+236 files in other folders)
