[project]
name = "starlocator"
version = "2.1.0"
description = "照片测星定位 网页app（地平论吧）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astronomy-engine>=2.1.19",
    "astropy>=7.1.0",
    "async-lru>=2.0.5",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "python-multipart>=0.0.20",
    "scipy>=1.16.1",
    "sep-pjw>=1.3.8",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.35.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "matplotlib>=3.10.5",
    "pytest>=8.4.1",
]
